helm/traefik/02-traefik.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.4
          args:
            - --api.insecure
            - --entryPoints.websecure.address=:443
            - --entryPoints.websecure.http.tls
            - --providers.kubernetesingress
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
            - name: websecure
              containerPort: 443
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-dashboard-service
spec:
  type: NodePort
  ports:
    - name: dashboard
      port: 8080
      targetPort: dashboard
      nodePort: 30001
  selector:
    app: traefik
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-web-service
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - port: 80
      targetPort: web
      nodePort: 30002
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-websecure-service
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - port: 443
      targetPort: websecure
      nodePort: 30003
